--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container" >
-        <h1>My div container</h1>
+        <h1>My BOX GAME ---By Pavan</h1>
         <div id="btn-container">
             <button id="color-btn">Change Color</button>
             <button id="addChild-btn">Add Child</button>
